--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
       <canvas id="canvas" width="1000" height="600"></canvas>
     </center>
     <script src="fabric.js"></script>
-    <script src="script.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
