--- a/index.html
+++ b/index.html
@@ -1,26 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>C85</title>
+    <link rel="stylesheet" href="style.css" />
+    <script src="fabric.js"></script>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
-      crossorigin="anonymous"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="style.css" />
-    <title>SUPERHERO</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
   </head>
   <body>
     <center>
       <h1 class="badge-primary">SUPERHERO</h1>
       <h2 class="badge-warning">
-        CURRENT WIDTH - <span>30</span> CURRENT HEIGHT - <span>30</span>
+        CURRENT WIDTH - <span id="current_width">30</span> CURRENT HEIGHT -
+        <span id="current_height">30</span>
       </h2>
-      <canvas id="canvas" width="1000" height="600"></canvas>
+      <canvas id="myCanvas" width="1000" height="600"></canvas>
     </center>
-    <script src="fabric.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
