--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>C85</title>
+    <title>SUPERHERO</title>
     <link rel="stylesheet" href="style.css" />
     <script src="fabric.js"></script>
     <link
